--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>lbnet.telegram</groupId>
     <artifactId>telegram-zero-two</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.7.0</version>
+    <version>0.0.9.0</version>
     <name>telegram-zero-two</name>
     <url>http://maven.apache.org</url>
 
@@ -15,7 +15,7 @@
         <maven.clean.failOnError>false</maven.clean.failOnError>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <mainClass>lbnet.telegram.zerotwo.NewClass</mainClass>
+        <mainClass>lbnet.telegram.zerotwo.NoopClass</mainClass>
         <exec.mainClass>${mainClass}</exec.mainClass>
         <exec.inheritIo>true</exec.inheritIo>
     </properties>
@@ -62,6 +62,25 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
             <version>6.8.0</version>
+            <exclusions>
+                <!-- if these are not excluded GraalVM generates output with extra dlls -->
+                <exclusion>
+                    <groupId>org.glassfish.jersey.core</groupId>
+                    <artifactId>jersey-server</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jersey.inject</groupId>
+                    <artifactId>jersey-hk2</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jersey.media</groupId>
+                    <artifactId>jersey-media-json-jackson</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jersey.containers</groupId>
+                    <artifactId>jersey-container-grizzly2-http</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
